Enhance index.html with image gallery and resume link
Added sections for image gallery and resume download.

--- a/index.html
+++ b/index.html
@@ -52,10 +52,15 @@
             Delivered strategic recommendations on predictive analytics, loyalty programs, and regional optimization.
         </p>
         <div class="image-gallery">
-            <img src="images/dashboard1.png" alt="Dashboard Screenshot 1">
-            <img src="images/dashboard2.png" alt="Dashboard Screenshot 2">
-            <img src="images/dashboard3.png" alt="Dashboard Screenshot 3">
-        </div>
+    <figure>
+        <img src="images/dashboard1.png" alt="NovaMed Sales Overview Dashboard">
+        <figcaption>Sales Overview Dashboard – Total Sales, Profit, and Drug Performance</figcaption>
+    </figure>
+    <figure>
+        <img src="images/dashboard2.png" alt="NovaMed Geographic & Demographic Insights">
+        <figcaption>Geographic and Demographic Insights – Regional and Customer Analysis</figcaption>
+    </figure>
+</div>
     </section>
 
     <section id="education">
@@ -66,6 +71,14 @@
             <li>Data Analytics Certificate – 10Alytics (2025)</li>
         </ul>
     </section>
+
+    <section id="resume">
+    <h2>Download My Resume</h2>
+    <p>
+        You can download my full CV to learn more about my background, skills, and project experience.
+    </p>
+    <a href="resume_oluwaseun_muyiwa.pdf" download class="btn-download">📄 Download Resume (PDF)</a>
+</section>
 
     <section id="contact">
         <h2>Contact</h2>
