Add download link for project presentation

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             Provided insights into product performance, regional markets, and buyer behavior.
             Delivered strategic recommendations on predictive analytics, loyalty programs, and regional optimization.
         </p>
+        <a href="NovaMed_Sales_Analysis_Presentation.pptx" target="_blank" class="btn-download">📊 View Project Presentation</a>
         <div class="image-gallery">
     <figure>
         <img src="images/dashboard1.png" alt="NovaMed Sales Overview Dashboard">
