Remove 'project' from resume description

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section id="resume">
     <h2>Download My Resume</h2>
     <p>
-        You can download my full CV to learn more about my background, skills, and project experience.
+        You can download my full CV to learn more about my background, skills, and experience.
     </p>
     <a href="resume_oluwaseun_muyiwa.pdf" download class="btn-download">📄 Download Resume (PDF)</a>
 </section>
