Revise 'About Me' section for improved clarity
Updated the 'About Me' section to enhance clarity and detail about experience and skills.

--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
     </nav>
 
     <section id="about">
-        <h2>About Me</h2>
-        <p>
-            Results-driven Data Analyst with expertise in data visualization, business intelligence, and reporting automation.
-            Skilled in SQL, Power BI, Excel, and PostgreSQL, transforming data into actionable insights across healthcare, retail, and technology sectors.
-        </p>
-    </section>
+    <h2>About Me</h2>
+    <p>
+        I’m a results-driven <strong>Data Analyst</strong> with proven experience transforming raw data into clear, actionable insights across healthcare, retail, and technology sectors. Skilled in <strong>SQL, Power BI, Excel, and PostgreSQL</strong>, I specialize in designing dashboards, automating reporting frameworks, and optimizing performance tracking.
+    </p>
+    <p>
+        Through my <strong>10Alytics Data Analytics certification</strong> and hands-on industry experience, I’ve built analytical solutions that enhance decision-making, efficiency, and business growth.
+    </p>
+    <p>
+        I’m passionate about leveraging analytics to drive smarter decisions, streamline operations, and deliver measurable results.
+    </p>
+</section>
 
     <section id="skills">
         <h2>Technical Skills</h2>
