--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
     <section id="about">
     <h2>About Me</h2>
     <p>
-        I’m a results-driven <strong>Data Analyst</strong> with proven experience transforming raw data into clear, actionable insights across healthcare, retail, and technology sectors. Skilled in <strong>SQL, Power BI, Excel, and PostgreSQL</strong>, I specialize in designing dashboards, automating reporting frameworks, and optimizing performance tracking.
-    </p>
-    <p>
-        Through my <strong>10Alytics Data Analytics certification</strong> and hands-on industry experience, I’ve built analytical solutions that enhance decision-making, efficiency, and business growth.
+        I’m a results-driven <strong>Data Analyst</strong> with proven experience transforming raw data into clear, actionable insights across healthcare, retail, and technology sectors. Skilled in <strong>SQL, Power BI, Excel, and PostgreSQL</strong>, I specialise in designing dashboards, automating reporting frameworks, optimising performance tracking, and I’ve built analytical solutions that enhance decision-making, efficiency, and business growth.
     </p>
     <p>
         I’m passionate about leveraging analytics to drive smarter decisions, streamline operations, and deliver measurable results.
