Change 'Featured Project' to 'Featured Projects'

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </section>
 
     <section id="project">
-        <h2>Featured Project</h2>
+        <h2>Featured Projects</h2>
         <h3>NovaMed Solutions – Sales Performance Analysis and Reporting</h3>
         <p><em>10Alytics Capstone Project</em></p>
         <p>
@@ -53,7 +53,7 @@
             Provided insights into product performance, regional markets, and buyer behavior.
             Delivered strategic recommendations on predictive analytics, loyalty programs, and regional optimization.
         </p>
-        <a href="NovaMed_Sales_Analysis_Presentation.pptx" target="_blank" class="btn-download">📊 View Project Presentation</a>
+        <a href="NovaMed_Sales_Analysis_Presentation.pdf" target="_blank" class="btn-download">📊 View Project Presentation (PDF)</a>
         <div class="image-gallery">
     </section>
 
