--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="project">
         <h2>Featured Projects</h2>
         <h3>NovaMed Solutions – Sales Performance Analysis and Reporting</h3>
-        <p><em>10Alytics Capstone Project</em></p>
+        <p><em>Amdari Project</em></p>
         <p>
             Developed an interactive Power BI Sales Performance Dashboard analyzing sales, profit, and customer trends from 2022–2026.
             Provided insights into product performance, regional markets, and buyer behavior.
