--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
         <a href="NovaMed_Sales_Analysis_Presentation.pdf" target="_blank" class="btn-download">📊 View Project Presentation (PDF)</a>
         <div class="image-gallery">
     </section>
+    <section id="project2">
+    <h2>Featured Project 2</h2>
+    <h3>Café Harmony – Business Performance Dashboard</h3>
+    <p><em>Interactive Power BI Dashboard & Insights Report</em></p>
+    <p>
+        Analysed café sales, customer feedback, stock levels, and employee performance to identify key growth and efficiency opportunities.
+        Delivered recommendations to reduce stockouts by 30%, raise service ratings above 4.0★, and improve sales efficiency by 20%.
+    </p>
+    <div class="image-gallery">
+        <figure>
+            <img src="images/cafe_dashboard1.png" alt="Café Harmony Dashboard Screenshot">
+            <figcaption>Business Performance Dashboard – Sales, Workforce & Customer KPIs</figcaption>
+        </figure>
+    </div>
+    <a href="Cafe_Harmony_Dashboard_Insights.pdf" target="_blank" class="btn-download">☕ View Project Presentation (PDF)</a>
+</section>
 
     <section id="education">
         <h2>Education & Certifications</h2>
