--- a/index.html
+++ b/index.html
@@ -46,19 +46,18 @@
 
     <section id="project">
         <h2>Featured Projects</h2>
-        <h3>NovaMed Solutions – Sales Performance Analysis and Reporting</h3>
+        <h3>1. NovaMed Solutions – Sales Performance Analysis and Reporting</h3>
         <p><em>Amdari Project</em></p>
         <p>
-            Developed an interactive Power BI Sales Performance Dashboard analyzing sales, profit, and customer trends from 2022–2026.
-            Provided insights into product performance, regional markets, and buyer behavior.
-            Delivered strategic recommendations on predictive analytics, loyalty programs, and regional optimization.
+            Developed an interactive Power BI Sales Performance Dashboard analysing sales, profit, and customer trends from 2022–2026.
+            Provided insights into product performance, regional markets, and buyer behaviour.
+            Delivered strategic recommendations on predictive analytics, loyalty programs, and regional optimisation.
         </p>
         <a href="NovaMed_Sales_Analysis_Presentation.pdf" target="_blank" class="btn-download">📊 View Project Presentation (PDF)</a>
         <div class="image-gallery">
     </section>
     <section id="project2">
-    <h2>Featured Project 2</h2>
-    <h3>Café Harmony – Business Performance Dashboard</h3>
+    <h3>2. Café Harmony – Business Performance Dashboard</h3>
     <p><em>Interactive Power BI Dashboard & Insights Report</em></p>
     <p>
         Analysed café sales, customer feedback, stock levels, and employee performance to identify key growth and efficiency opportunities.
