Revise education and certifications sections in index.html
Updated education and certifications sections with formatting improvements and additional details.

--- a/index.html
+++ b/index.html
@@ -67,13 +67,20 @@
 </section>
 
     <section id="education">
-        <h2>Education & Certifications</h2>
-        <ul>
-            <li>NVQ Level 7 MPH, Oxford Brookes University (Distinction, 2024)</li>
-            <li>Doctor of Medicine, V.N. Karazin Kharkiv National University (2022)</li>
-            <li>Data Analytics Certificate – 10Alytics (2025)</li>
-        </ul>
-    </section>
+    <h2>Education</h2>
+    <ul>
+        <li>NVQ Level 7 MPH, <em>Oxford Brookes University</em> — Distinction (2024)</li>
+        <li>Doctor of Medicine, <em>V.N. Karazin Kharkiv National University</em> — Merit (2022)</li>
+    </ul>
+</section>
+
+<section id="certifications">
+    <h2>Certifications</h2>
+    <ul>
+        <li>Data Analytics Certification — <em>10Alytics</em> (2025)</li>
+        <li>Introduction to Career Skills in Data Analytics  — <em>LinkedIn Learning</em> (2025)</li>
+    </ul>
+</section>
 
     <section id="resume">
     <h2>Download My Resume</h2>
