Revise NovaMed Solutions project details
Updated project description for NovaMed Solutions to include detailed insights and features of the Sales Performance & Customer Insights Dashboard.

--- a/index.html
+++ b/index.html
@@ -46,13 +46,27 @@
 
     <section id="project">
         <h2>Featured Projects</h2>
-        <h3>1. NovaMed Solutions – Sales Performance Analysis and Reporting</h3>
-        <p><em>Amdari Project</em></p>
-        <p>
-            Developed an interactive Power BI Sales Performance Dashboard analysing sales, profit, and customer trends from 2022–2026.
-            Provided insights into product performance, regional markets, and buyer behaviour.
-            Delivered strategic recommendations on predictive analytics, loyalty programs, and regional optimisation.
-        </p>
+        <h3>Sales Performance & Customer Insights Dashboard</h3>
+
+<p><strong>Client:</strong> NovaMed Solutions |
+<strong>Industry:</strong> Pharmaceutical Distribution |
+<strong>Tool:</strong> Power BI</p>
+
+<p>
+Built an interactive Power BI dashboard to analyse sales performance, profitability,
+product trends, and customer behaviour using multi-year pharmaceutical sales data.
+</p>
+
+<ul>
+    <li>Identified top- and underperforming drugs and customers</li>
+    <li>Analysed customer demographics and geographic revenue distribution</li>
+    <li>Highlighted inventory and demand forecasting inefficiencies</li>
+    <li>Enabled data-driven decisions for sales optimisation and targeted engagement</li>
+</ul>
+
+<a href="NovaMed_Sales_Analysis_Presentation.pdf" target="_blank" class="btn-download">
+📊 View Full Case Study (PDF)
+</a>
         <a href="NovaMed_Sales_Analysis_Presentation.pdf" target="_blank" class="btn-download">📊 View Project Presentation (PDF)</a>
         <div class="image-gallery">
     </section>
